finished presentation page

--- a/src/main/webapp/app/components/about/PresentationPartial.html
+++ b/src/main/webapp/app/components/about/PresentationPartial.html
@@ -1,48 +1,26 @@
 <div class="row">
     <div class="offset2 span8">
-        <h1>
-            <fmt:message key="tatami.presentation.title"/>
-        </h1>
+        <h1 translate="tatami.presentation.title"></h1>
         <br><br>
     </div>
 </div>
 <div class="row">
-    <div class="col-span-4"><img src="/assets/img/presentation_tatami.jpg" height="267" width="400" alt="Tatami"></div>
+    <div class="col-span-4"><img src="/assets/img/presentation_tatami.jpg" width="400" height="267" title="Tatami"></div>
     <div class="col-span-8">
         <br>
         <p>
-        <h2>
-            <fmt:message key="tatami.presentation.row1.title"/>
-        </h2>
+        <h2 translate="tatami.presentation.row1.title"></h2>
         </p>
         <ul>
-            <li>
-                <fmt:message key="tatami.presentation.row1.1"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row1.2"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row1.3"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row1.4"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row1.5"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row1.6"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row1.7"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row1.8"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row1.9"/>
-            </li>
+            <li translate="tatami.presentation.row1.line1"></li>
+            <li translate="tatami.presentation.row1.line2"></li>
+            <li translate="tatami.presentation.row1.line3"></li>
+            <li translate="tatami.presentation.row1.line4"></li>
+            <li translate="tatami.presentation.row1.line5"></li>
+            <li translate="tatami.presentation.row1.line6"></li>
+            <li translate="tatami.presentation.row1.line7"></li>
+            <li translate="tatami.presentation.row1.line8"></li>
+            <li translate="tatami.presentation.row1.line9"></li>
         </ul>
     </div>
 </div>
@@ -52,59 +30,35 @@
         <br>
         <br>
         <p>
-        <h2>
-            <fmt:message key="tatami.presentation.row2.title"/>
-        </h2>
+        <h2 translate="tatami.presentation.row2.title"></h2>
         </p>
         <ul>
-            <li>
-                <fmt:message key="tatami.presentation.row2.1"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row2.2"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row2.3"/>
-            </li>
+            <li translate="tatami.presentation.row2.line1"></li>
+            <li translate="tatami.presentation.row2.line2"></li>
+            <li translate="tatami.presentation.row2.line3"></li>
         </ul>
     </div>
-    <div class="col-span-4"><img src="/assets/img/presentation_devices.jpg" height="267" width="200" alt="Devices"></div>
+    <div class="col-span-4"><img src="/assets/img/presentation_devices.jpg" width="200" height="267" title="{{ 'tatami.presentation.devices' | translate }}"></div>
 </div>
 <div class="row">
     <br>
     <br>
     <br>
-    <div class="col-span-8"><img src="/assets/img/presentation_opensource.jpg" height="216" width="250Logo-ippon-MarquePage.png" alt="Open Source"></div>
+    <div class="col-span-8"><img src="/assets/img/presentation_opensource.jpg" width="250" height="216" title="{{ 'tatami.presentation.openSource' | translate }}"></div>
     <div class="col-span-4">
         <p>
-        <h2>
-            <fmt:message key="tatami.presentation.row3.title"/>
-        </h2>
+        <h2 translate="tatami.presentation.row3.title"></h2>
         </p>
         <ul>
+            <li translate="tatami.presentation.row3.line1"></li>
+            <li translate="tatami.presentation.row3.line2"></li>
+            <li translate="tatami.presentation.row3.line3"></li>
+            <li translate="tatami.presentation.row3.line4"></li>
+            <li translate="tatami.presentation.row3.line5"></li>
+            <li translate="tatami.presentation.row3.line6"></li>
+            <li translate="tatami.presentation.row3.line7"></li>
             <li>
-                <fmt:message key="tatami.presentation.row3.1"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row3.2"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row3.3"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row3.4"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row3.5"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row3.6"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row3.7"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row3.8"/>
+                <span translate="tatami.presentation.row3.line8"></span>
                 <a href="https://github.com/ippontech/tatami">https://github.com/ippontech/tatami</a>
             </li>
         </ul>
@@ -115,37 +69,33 @@
 <div class="row">
     <div class="col-span-8">
         <p>
-        <h2>
-            <fmt:message key="tatami.presentation.row4.title"/>
-        </h2>
+        <h2 translate="tatami.presentation.row4.title"></h2>
         </p>
         <ul>
             <li>
-                <fmt:message key="tatami.presentation.row4.1"/>
+                <span translate="tatami.presentation.row4.line1"></span>
                 <a href="https://tatami.ippon.fr">https://tatami.ippon.fr</a>
             </li>
-            <li>
-                <fmt:message key="tatami.presentation.row4.2"/>
-            </li>
-            <li>
-                <fmt:message key="tatami.presentation.row4.3"/>
-            </li>
+            <li translate="tatami.presentation.row4.line2"></li>
+            <li translate="tatami.presentation.row4.line3"></li>
         </ul>
     </div>
-    <div class="col-span-4"><img src="/assets/img/company-logo-bookmark.png" height="148" width="150" alt="<fmt:message key="tatami.logo"/>"></div>
+    <div class="col-span-4"><img src="/assets/img/company-logo-bookmark.png" width="150" height="148" title="{{ 'tatami.menu.logo' | translate }}"></div>
 </div>
 <div class="row">
     <div class="col-span-12">
         <p>
-        <h2>
-            <fmt:message key="tatami.presentation.row5.title"/>
-        </h2>
+        <h2 translate="tatami.presentation.row5.title"></h2>
         </p>
         <ul>
             <li>
-                <fmt:message key="tatami.presentation.row5.1"/>
+                <span translate="tatami.presentation.row5.line1"></span>
                 <a href="mailto:commercial@ippon.fr">commercial@ippon.fr</a>
             </li>
         </ul>
     </div>
 </div>
+<br>
+<br>
+<br>
+<br>
