fixed translation key

--- a/src/main/webapp/app/components/home/post/PostView.html
+++ b/src/main/webapp/app/components/home/post/PostView.html
@@ -59,7 +59,7 @@
 
                         <small ng-show="currentStatus.replyTo">
                             <span class="glyphicon glyphicon-share-alt"></span>
-                            <span translate="tatami.post.replyto"></span>
+                            <span translate="tatami.status.replyTo"></span>
                             <a ng-href="#status/{{ currentStatus.replyTo }}">@{{ currentStatus.replyToUsername }}</a>
                             <br>
                         </small>
