--- a/src/main/webapp/app/components/home/timeline/TimelinePartial.html
+++ b/src/main/webapp/app/components/home/timeline/TimelinePartial.html
@@ -66,7 +66,7 @@
 
                                     <small ng-show="status.replyTo">
                                         <span class="glyphicon glyphicon-share-alt"></span>
-                                        <span translate="tatami.status.replyto"></span>
+                                        <span translate="tatami.status.replyTo"></span>
                                         <a ng-href="#status/{{ status.replyTo }}">@{{ status.replyToUsername }}</a>
                                         <br>
                                     </small>
