Significant progress on the account page and routing

--- a/src/main/webapp/app/components/account/files/FileView.html
+++ b/src/main/webapp/app/components/account/files/FileView.html
@@ -1,20 +1,20 @@
-<div id="accountContent" class="alert alert-status">
-    <div id="content-container"><div>
-        <div id="region1"><div>
+<div class="col-span-8">
+    <div class="alert alert-status">
+        <div>
             <h2>Files</h2>
             <span class="file-infos"></span>
-        </div></div>
-        <div id="region2"><div>
+        </div>
+        <div>
 
             <div class="progress">
 
                 <div class="progress-bar progress-bar-success" style="width: 0%;">
 
                     <span class="quota">0%</span>
-                </div>          </div>
-        </div></div>
-        <div id="region3"></div>
-        <div id="region4"><div>
+                </div>
+            </div>
+        </div>
+        <div>
             <table class="table noCollapse">
                 <tbody><tr>
                     <th style="border-top :0">  </th>
@@ -24,10 +24,22 @@
                     <th style="border-top :0">  </th>
                 </tr>
                 </tbody><tbody class="items">
-            </tbody>
+            <tr>
+                <td>
+                    <a href="/tatami/file/41ba7960-6aa7-11e4-b3ec-fe54008898dc/van-c.p12" target="_blank"><img src="/img/document_icon.png"></a>
+
+                </td>
+                <td><a href="/tatami/file/41ba7960-6aa7-11e4-b3ec-fe54008898dc/van-c.p12" target="_blank">van-c.p12</a></td>
+                <td>1.882 kb</td>
+                <td>12 Nov 2014 </td>
+                <td>
+        <span class="btn btn-primary btn-block">
+            Delete
+        </span>
+                </td>
+            </tr></tbody>
             </table>
 
-        </div></div>
-        <div id="region5"></div>
-    </div></div>
+        </div>
+    </div>
 </div>
