--- a/src/main/webapp/app/components/account/password/PasswordView.html
+++ b/src/main/webapp/app/components/account/password/PasswordView.html
@@ -1,36 +1,34 @@
-<div ng-controller="PasswordController">
-    <form class="form-horizontal row-fluid">
-        <h2 translate="tatami.password"></h2>
-        <div ng-show="status.confirmChange" class="jGrowl-notification ui-state-highlight ui-corner-all alert-success" style="display: block;">
-            <div class="jGrowl-close">×</div>
-            <div class="jGrowl-header">
-            </div>
-            <div class="jGrowl-message">The form has been successfully saved.</div>
+<div class="col-span-8">
+    <div class="alert alert-status">
+        <div ng-controller="PasswordController">
+            <form class="form-horizontal row-fluid">
+                <h2 translate="tatami.password.title"></h2>
+                <fieldset>
+                    <legend translate="tatami.password.update"></legend>
+                    <div class="control-group">
+                        <label class="control-label" translate="tatami.password.old"></label>
+                        <div class="controls">
+                            <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.oldPassword">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label" translate="tatami.password.new"></label>
+                        <div class="controls">
+                            <input type="password" required="required" ize="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPassword">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label" translate="tatami.password.confirm"></label>
+                        <div class="controls">
+                            <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPasswordConfirmation">
+                        </div>
+                    </div>
+                    <div class="return"></div>
+                    <div class="form-actions">
+                        <button type="submit" class="btn btn-primary btn-block" translate="tatami.form.save" ng-click="changePassword()"></button>
+                    </div>
+                </fieldset>
+            </form>
         </div>
-        <fieldset>
-            <legend translate="tatami.user.password.legend"></legend>
-            <div class="control-group">
-                <label class="control-label" translate="tatami.user.password.old"></label>
-                <div class="controls">
-                    <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.oldPassword">
-                </div>
-            </div>
-            <div class="control-group">
-                <label class="control-label" translate="tatami.user.password.new"></label>
-                <div class="controls">
-                    <input type="password" required="required" ize="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPassword">
-                </div>
-            </div>
-            <div class="control-group">
-                <label class="control-label" translate="tatami.user.password.confirm"></label>
-                <div class="controls">
-                    <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPasswordConfirmation">
-                </div>
-            </div>
-            <div class="return"></div>
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary btn-block" translate="tatami.form.save" ng-click="changePassword()"></button>
-            </div>
-        </fieldset>
-    </form>
+    </div>
 </div>
