Significant progress on Account page. Need to change naming scheme due to previous one introducing bug on timeline

--- a/src/main/webapp/app/components/account/profile/ProfileView.html
+++ b/src/main/webapp/app/components/account/profile/ProfileView.html
@@ -1,6 +1,6 @@
 <div class="col-span-8">
     <div class="alert alert-status">
-        <div ng-controller="ProfileController">
+        <div ng-controller="AccountProfileController">
             <form>
                 <h2 translate="tatami.profile.title"></h2>
                 <br>
