--- a/src/main/webapp/app/components/account/groups/GroupsView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsView.html
@@ -1,6 +1,6 @@
 <div class="col-span-8">
     <div class="alert alert-status">
-        <div ng-controller="GroupsController" ng-init="getGroups()">
+        <div ng-controller="AccountGroupsController" ng-init="getGroups()">
             <form class="form-horizontal row-fluid">
                 <h2 translate="tatami.groups.title"></h2>
 
