--- a/src/main/webapp/app/components/account/preferences/PreferencesView.html
+++ b/src/main/webapp/app/components/account/preferences/PreferencesView.html
@@ -1,6 +1,6 @@
 <div class="col-span-8">
     <div class="alert alert-status">
-        <div ng-controller="PreferenceController">
+        <div ng-controller="PreferencesController">
             <form class="form-horizontal row-fluid">
                 <h2 translate="tatami.preferences.title"></h2>
                 <legend translate="tatami.preferences.notifications"></legend>
