--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -1,6 +1,6 @@
 <div class="col-span-8">
     <div class="alert alert-status">
-        <div ng-controller="TagController" ng-init="getTags()">
+        <div ng-controller="TagsController" ng-init="getTags()">
             <div class="tabMenu">
                 <ul class="nav nav-tabs">
                     <li class="active">
