fixed some translation keys

--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -10,7 +10,7 @@
                         <a href="#users/recommended" translate="tatami.users.recommend"></a>
                     </li>
                     <li>
-                        <a href="#users/search" translate="tatami.search"></a>
+                        <a href="#users/search" translate="tatami.users.search"></a>
                     </li>
                 </ul>
             </div>
