Working on Account group tabs

--- a/src/main/webapp/app/components/account/groups/GroupsView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsView.html
@@ -51,15 +51,15 @@
                 <div class="tabMenu">
                     <ul class="nav nav-tabs">
                         <li class="active">
-                            <a href="#groups" ng-click="switchTabs(true, false, false)" translate="tatami.groups.myGroups">
+                            <a href="#/account/groups" ng-click="switchTabs(true, false, false)" translate="tatami.groups.myGroups">
                             </a>
                         </li>
                         <li>
-                            <a href="#groups/recommended" ng-click="switchTabs(false, true, false)" translate="tatami.tags.trends">
+                            <a href="#/account/groups/recommended" ng-click="switchTabs(false, true, false)" translate="tatami.tags.trends">
                             </a>
                         </li>
                         <li>
-                            <a href="#groups/search" ng-click="switchTabs(false, false, true)" translate="tatami.groups.search">
+                            <a href="#/account/groups/search" ng-click="switchTabs(false, false, true)" translate="tatami.groups.search">
                             </a>
                         </li>
                     </ul>
