--- a/src/main/webapp/app/components/account/groups/GroupsView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsView.html
@@ -55,11 +55,11 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#/account/groups/recommended" ng-click="switchTabs(false, true, false)" translate="tatami.tags.trends">
+                            <a href="#/account/groups/#recommended" translate="tatami.tags.trends">
                             </a>
                         </li>
                         <li>
-                            <a href="#/account/groups/search" ng-click="switchTabs(false, false, true)" translate="tatami.groups.search">
+                            <a href="#/account/groups/#search" ng-click="switchTabs(false, false, true)" translate="tatami.groups.search">
                             </a>
                         </li>
                     </ul>
